fix insta class stretching

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -310,9 +310,8 @@ a.link {
 }
 
 .insta {
-    height: auto !important;
     flex: 1;
-    max-width: 20em;
+    min-width: 15em;
 }
 
 .insta-text {
